--- a/androidLogo/main.css
+++ b/androidLogo/main.css
@@ -21,8 +21,8 @@ div div {
     border-top-right-radius: 150px;
 }
 
-#l_eye,
-#r_eye {
+#left_eye,
+#right_eye {
     background: #fff;
     width: 20px;
     height: 20px;
@@ -31,16 +31,16 @@ div div {
     top: 42px;
 }
 
-#l_eye {
+#left_eye {
     left: 50px;
 }
 
-#r_eye {
+#right_eye {
     right: 50px;
 }
 
-#l_ant,
-#r_ant {
+#left_ant,
+#right_ant {
     width: 6px;
     height: 50px;
     position: absolute;
@@ -48,12 +48,12 @@ div div {
     border-radius: 3px;
 }
 
-#l_ant {
+#left_ant {
     left: 50px;
     transform: rotate(-30deg);
 }
 
-#r_ant {
+#right_ant {
     right: 50px;
     transform: rotate(30deg);
 }
@@ -65,53 +65,53 @@ div div {
     border-radius: 0 0 25px 25px;
 }
 
-#l_arm,
-#r_arm,
-#l_leg,
-#r_leg {
+#left_arm,
+#right_arm,
+#left_leg,
+#right_leg {
     width: 50px;
     position: absolute;
     transition: .1s ease-in-out;
 }
 
-#l_arm,
-#r_arm {
+#left_arm,
+#right_arm {
     height: 150px;
     border-radius: 25px;
 }
 
-#l_leg,
-#r_leg {
+#left_leg,
+#right_leg {
     height: 80px;
     top: 182px;
     border-radius: 0 0 25px 25px;
 }
 
-#l_arm {
+#left_arm {
     left: -58px;
 }
 
-#r_arm {
+#right_arm {
     right: -58px;
 }
 
-#l_leg {
+#left_leg {
     left: 45px;
 }
 
-#r_leg {
+#right_leg {
     right: 45px;
 }
 #head:hover{
     transform: rotate(-5deg);
 }
-#l_arm:hover{
+#left_arm:hover{
     transform: rotate(30deg);
 }
-#r_arm:hover{
+#right_arm:hover{
     transform: rotate(-30deg);
 }
-#l_leg:hover,
-#r_leg:hover{
+#left_leg:hover,
+#right_leg:hover{
     transform: translateY(-5px);
 }
